# ssm-latent-rs

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  config.toml  deny.toml  justfile
.github/workflows/: ci.yml  security-audit.yml
benchmark/: bench.rs
circle-world-demo/: Cargo.toml
circle-world-demo/src/: ff_main.rs  main.rs  rtrl_main.rs
deterministic-ai-agent-demo/: Cargo.toml  README.md
deterministic-ai-agent-demo/config/: agent_settings.toml  agent_settings.yaml  devices.toml  devices.yaml  tools_data.toml  tools_data.yaml
deterministic-ai-agent-demo/data/: sample_data.json
deterministic-ai-agent-demo/src/: encoder.rs  lib.rs  main.rs  model.rs  ner.rs  train.rs
docs/: BEYOND_BACKPROP.md  RESEARCH_STANDING.md
examples/: bench.rs
game-playing-demo/: Cargo.toml  README.md
game-playing-demo/src/: main.rs
game-playing-wasm/: Cargo.toml  index.html
game-playing-wasm/src/: lib.rs
log-anomaly-demo/: Cargo.toml  anomalous_logs.json  normal_logs.json
log-anomaly-demo/src/: main.rs
nab-demo/: .gitignore  ANALYSIS_REPORT.md  BENCHMARK_REPORT.md  Cargo.toml  README.md  evaluate_nab.py
nab-demo/config/: nab_config.toml  thresholds.json
nab-demo/nab/: labeler.py  sweeper.py
nab-demo/scripts/: analyze_scores.py  analyze_signals.py  debug_ts.py
nab-demo/src/: main.rs
report/ssm_latent_world_model/: ssm_latent_world_model.tex
src/: error.rs  ff_model.rs  forward_forward.rs  jepa.rs  latent.rs  lib.rs  main.rs  mamba.rs  model.rs  multimodal.rs  predictor.rs  preprocess.rs  rtrl.rs  rtrl_world.rs  ssm.rs
tests/: consistency_test.rs  core_tests.rs  equivalence_test.rs  extended_tests.rs  identifiability_test.rs  monitor_tests.rs  multimodal_tests.rs
tiny-stories-jepa-demo/: Cargo.toml  config.toml
tiny-stories-jepa-demo/src/: data.rs  main.rs  model.rs  training.rs
wasm-demo/: Cargo.toml  index.html
wasm-demo/src/: lib.rs
