[workspace]
members = [
    "circle-world-demo",
    "log-anomaly-demo",
    "wasm-demo",
    "deterministic-ai-agent-demo",
]

[package]
name = "ssm-latent-model"
version = "0.1.0"
edition = "2024"
default-run = "circle-world-demo"

[lib]
path = "src/lib.rs"

[[bin]]
name = "circle-world-demo"
path = "circle-world-demo/src/main.rs"

[dependencies]
burn = { version = "0.20", features = ["std", "autodiff", "wgpu", "train"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "tls-rustls", "ndarray", "download-binaries"] }
ndarray = "0.17"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "ureq"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10"
anyhow = "1.0"

[features]
default = ["wgpu", "ndarray"]
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]

