[workspace]
members = [
    "circle-world-demo",
    "log-anomaly-demo",
    "wasm-demo",
    "deterministic-ai-agent-demo",
]

[package]
name = "ssm-latent-model"
version = "0.1.0"
edition = "2024"
default-run = "circle-world-demo"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff", "wgpu"] }
ndarray = { version = "0.17.2", default-features = false, features = ["std"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "download-binaries", "tls-rustls" ], optional = true }
rand = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }

[features]
default = ["std", "ndarray", "autodiff"]
std = ["burn/std", "anyhow/std", "ndarray/std"]
ndarray = ["std", "burn/ndarray"]
autodiff = ["burn/autodiff"]
wgpu = ["burn/wgpu"]
train = ["burn/train"]

[[bin]]
name = "circle-world-demo"
path = "circle-world-demo/src/main.rs"

