[workspace]
members = [
    "circle-world-demo",
    "deterministic-ai-agent-demo",
    "game-playing-wasm",
    "log-anomaly-demo",
    "metronome-demo",
    "nab-demo",
    "tiny-stories-jepa-demo",
]

[package]
name = "ssm-latent-model"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
default-run = "ssm-latent-model"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff", "wgpu"] }
ndarray = { version = "0.17.2", default-features = false, features = ["std"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "std", "download-binaries", "tls-rustls" ], optional = true }
rand = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.6"

[features]
default = ["std", "ndarray", "autodiff"]
std = ["burn/std", "anyhow/std", "ndarray/std", "tracing/std"]
ndarray = ["std", "burn/ndarray"]
autodiff = ["burn/autodiff"]
wgpu = ["burn/wgpu"]
train = ["burn/train"]
ort = ["dep:ort"]

[[bench]]
name = "training_step"
harness = false
path = "benchmark/bench.rs"

