[package]
name = "circle-world-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ssm-latent-model = { path = "..", features = ["train"] }
burn = { version = "0.21", default-features = false, features = ["std", "autodiff", "wgpu", "train", "ndarray"] }
rand = { version = "0.10", default-features = false }

[features]
wgpu = ["burn/wgpu"]
ndarray = ["burn/std"]

[[bin]]
name = "circle-world-demo"
path = "src/main.rs"
