[package]
name = "circle-world-demo"
version = "0.1.0"
edition = "2024"
default-run = "circle-world-rtrl"

[dependencies]
ssm-latent-model = { path = "..", features = ["train"] }
burn = { version = "0.21", default-features = false, features = ["std", "autodiff", "train"] }
rand = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu", "ssm-latent-model/wgpu"]
ndarray = ["burn/ndarray", "ssm-latent-model/ndarray"]

[[bin]]
name = "circle-world-demo"
path = "src/main.rs"

[[bin]]
name = "circle-world-rtrl"
path = "src/rtrl_main.rs"

[[bin]]
name = "circle-world-ff"
path = "src/ff_main.rs"
