[package]
name = "deterministic-ai-agent-demo"
version = "0.1.0"
edition = "2024"
default-run = "deterministic-agent"

[dependencies]
ssm-latent-model = { path = "..", default-features = false, features = ["wgpu", "ndarray", "train"] }
burn = { version = "0.21", default-features = false, features = ["std", "autodiff", "wgpu", "train"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "tls-rustls", "ndarray", "download-binaries"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "ureq"] }
ndarray = "0.17"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
rand = { version = "0.10", default-features = false }
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[[bin]]
name = "deterministic-agent"
path = "src/main.rs"
