[package]
name = "log-anomaly-demo"
version = "0.1.0"
edition = "2024"
default-run = "log-demo"

[dependencies]
ssm-latent-model = { path = "..", default-features = false, features = ["wgpu", "ndarray", "train"] }
burn = { version = "0.21", default-features = false, features = ["std", "autodiff", "wgpu", "train", "ndarray"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "tls-rustls", "ndarray", "download-binaries", "cuda"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", default-features = false, features = ["rustls-tls", "ureq"] }
ndarray = { version = "0.17", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rand = { version = "0.10", default-features = false }

[[bin]]
name = "log-demo"
path = "src/main.rs"
