[package]
name = "tiny-stories-jepa-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["train", "wgpu"] }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq"] }
anyhow = "1.0.95"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# Reference the core logic from the project root
ssm-latent-model = { path = ".." }
