[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ssm-latent-model = { path = "..", default-features = false }
burn = { version = "0.21", default-features = false, features = ["std", "autodiff"] }
wasm-bindgen = { version = "=0.2.118" }
wasm-bindgen-futures = { version = "0.4", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["CanvasRenderingContext2d", "Window", "Document", "HtmlCanvasElement", "HtmlButtonElement", "console", "HtmlElement", "Node", "Element"] }
console_error_panic_hook = { version = "0.1", default-features = false }
rand = { version = "0.10", default-features = false }
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = ["js"] }

[features]
default = ["ndarray"]
wgpu = ["burn/wgpu", "burn/webgpu", "ssm-latent-model/wgpu"]
ndarray = ["burn/ndarray", "ssm-latent-model/ndarray"]
